Added bgfx submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "External/bimg"]
 	path = External/bimg
 	url = https://github.com/bkaradzic/bimg.git
+[submodule "External/bgfx"]
+	path = External/bgfx
+	url = https://github.com/JeppeNielsen/bgfx.git
