--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "External/bgfx"]
 	path = External/bgfx
 	url = https://github.com/JeppeNielsen/bgfx.git
+[submodule "entt"]
+	path = entt
+	url = https://github.com/skypjack/entt.git
