Added entt module

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "External/bgfx"]
 	path = External/bgfx
 	url = https://github.com/JeppeNielsen/bgfx.git
+[submodule "External/entt"]
+	path = External/entt
+	url = https://github.com/skypjack/entt.git
