--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "External/segvcatch"]
 	path = External/segvcatch
 	url = https://github.com/Plaristote/segvcatch.git
+[submodule "External/glm"]
+	path = External/glm
+	url = https://github.com/JeppeNielsen/glm.git
