Added stb external lib

--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "External/glm"]
 	path = External/glm
 	url = https://github.com/JeppeNielsen/glm.git
+[submodule "External/stb"]
+	path = External/stb
+	url = https://github.com/nothings/stb.git
